--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -26,7 +26,9 @@ jobs:
         id: dockerfiles
         run: |
           dockerfiles=$(find . -name 'Dockerfile' -exec dirname {} \; | sed 's/^\.\///')
-          echo "::set-output name=components::$dockerfiles"
+          echo "components<<EOF" >> $GITHUB_OUTPUT
+          echo "$dockerfiles" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -39,15 +41,16 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ component }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ item }}
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v4
         with:
-          context: ./${{ component }}
+          context: ./${{ item }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
         strategy:
           matrix:
-            component: ${{ steps.dockerfiles.outputs.components.split(' ') }}
+            item: ${{ steps.dockerfiles.outputs.components.splitLines() }}
