--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -24,8 +24,26 @@ jobs:
       - name: Get list of Dockerfiles
         id: dockerfiles
         run: |
-          dockerfiles=$(find . -name 'Dockerfile' -exec dirname {} \; | sed 's/^\.\///')
-          echo "components=$(echo \"$dockerfiles\" | jq -R -s 'split("\n") | map(select(length > 0))')" >> $GITHUB_ENV
+          dockerfiles=$(find . -name 'Dockerfile' -exec dirname {} \; | sed 's/^\.\///' | jq -R -s 'split("\n") | map(select(length > 0))')
+          echo "components=$dockerfiles" >> $GITHUB_ENV
+
+    outputs:
+      components: ${{ env.components }}
+
+  build-matrix:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    strategy:
+      matrix:
+        component: ${{ fromJson(needs.build-and-push.outputs.components) }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -34,10 +52,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.component }}
+
       - name: Build and push Docker images
         uses: docker/build-push-action@v4
-        for: ${{ fromJson(env.components) }}
         with:
-          context: ./${{ item }}
+          context: ./${{ matrix.component }}
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ item }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
