refactor: ignore when md files are edited and make sure only one action is being run

--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -1,11 +1,19 @@
 name: Build and Publish Docker Images
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - '**/*.md'
     tags: [ "v*.*.*" ]
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - '**/*.md'
   schedule:
     - cron: '0 0 * * 0'  # Weekly on Sundays
 
