refactor: delete old versions due to

--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -20,6 +20,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  KEEP_VERSIONS: 2  # num of versions to keep (latest + 1 backup)
 
 jobs:
   prepare:
@@ -71,10 +72,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.dockerfile_dir }}
           tags: |
             type=raw,value=latest
-            type=ref,event=branch
-            type=ref,event=tag
             type=sha,prefix=sha-
-            type=schedule,pattern={{date 'YYYYMMDD'}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -86,3 +84,18 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=${{ matrix.dockerfile_dir }}
           cache-to: type=gha,mode=max,scope=${{ matrix.dockerfile_dir }}
+
+  cleanup:
+    needs: [build-and-push]
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    permissions:
+      packages: write
+    steps:
+      - name: Delete old images
+        uses: actions/delete-package-versions@v4
+        with:
+          package-name: ${{ env.IMAGE_NAME }}
+          package-type: 'container'
+          min-versions-to-keep: ${{ env.KEEP_VERSIONS }}
+          delete-only-untagged-versions: false
