--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -84,3 +84,30 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=${{ matrix.dockerfile_dir }}
           cache-to: type=gha,mode=max,scope=${{ matrix.dockerfile_dir }}
+
+  cleanup:
+    needs: [ build-and-push ]
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    permissions:
+      packages: write
+    strategy:
+      matrix:
+        dockerfile_dir: ${{ fromJson(needs.prepare.outputs.matrix) }}
+      fail-fast: false
+    steps:
+      - name: Delete old container versions
+        uses: actions/delete-package-versions@v4
+        with:
+          package-name: ${{ env.IMAGE_NAME }}/${{ matrix.dockerfile_dir }}
+          package-type: 'container'
+          min-versions-to-keep: ${{ env.KEEP_VERSIONS }}
+          delete-only-untagged-versions: true
+
+      - name: Delete old tagged versions
+        uses: actions/delete-package-versions@v4
+        with:
+          package-name: ${{ env.IMAGE_NAME }}/${{ matrix.dockerfile_dir }}
+          package-type: 'container'
+          min-versions-to-keep: ${{ env.KEEP_VERSIONS }}
+          delete-only-untagged-versions: false
